<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>

    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="share_the_app">Поделиться приложением</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_message">Check out this Android development course at Yandex.Praktikum: https://practicum.yandex.ru/android-developer/</string>
    <string name="support_message">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="thanks_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="my_mail">richard.orlov13@gmail.com</string>
    <string name="share_via">Share via</string>
    <string name="my_email">richard.orlov13@gmail.com</string>

    <string name="reload">Обновить</string>
    <string name="no_data_found">Ничего не нашлось</string>
    <string name="connect_error">Проблемы с сервером</string>
    <string name="no_internet">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="history_clear">Очистить историю</string>
    <string name="search_text">Вы искали</string>

    <string name="track_name">Название песни</string>
    <string name="artist_name">Исполнитель</string>
    <string name="time">00:00</string>
    <string name="track_time">Длительность</string>
    <string name="collection_name">Альбом</string>
    <string name="release_date">Год</string>
    <string name="genre_name">Жанр</string>
    <string name="country">Страна</string>
    <string name="unknown">n/a</string>

    <string name="empty_medialibrary">Ваша медиатека пуста</string>
    <string name="not_create_playlist">Вы не создали \n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favourites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>

    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_create">Создать</string>
    <string name="finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="loss_of_unsaved_data">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_added_now">Добавлено в плейлист</string>
    <string name="track_added_to_playlist_already">Трек уже добавлен в плейлист</string>
    <string name="word_one_track">трек</string>
    <string name="word_two_tracks">трека</string>
    <string name="word_many_tracks">треков</string>

    <string name="dont_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="empty_playlist_tracks_placeholder_message">Вы не добавили ни одного трека</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="save_button_text">Сохранить</string>
    <string name="remove_playlist">Удалить плейлист</string>
    <string name="edit_playlist_button">Редактировать информацию</string>
    <string name="share_button">Поделиться</string>
    <string name="remove_track_question">Хотите удалить трек?</string>
    <string name="yes_option">Да</string>
    <string name="no_option">Нет</string>

    <plurals name="tracks">
        <item quantity="zero">Нет треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>