<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Settings"
    android:background="?attr/whiteBlack"
    tools:context=".settings.ui.SettingFragment">

    <!-- Ваша Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/settings"
         />

    <!-- Ваш SwitchMaterial -->
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/dark_theme"
        app:trackTint="?attr/switchTrackColor"
        app:thumbTint="?attr/switchThumbColor"
        android:textColor="?attr/blackWhite"
        style="@style/MySwitchMaterialStyle"
        />

    <!-- Первый элемент с иконкой -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/shareButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawableEnd="@drawable/share"
        android:text="@string/share_the_app"
        style="@style/SettingTextView"
        />

    <!-- Второй элемент с иконкой -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/supportButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawableEnd="@drawable/support"
        android:text="@string/write_to_support"
        style="@style/SettingTextView"/>

    <!-- Третий элемент с иконкой -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/agreementButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawableEnd="@drawable/arrow_forward"
        android:text="@string/user_agreement"
        style="@style/SettingTextView"/>

</LinearLayout>
