<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:titleTextColor="@android:color/white"
        app:title="@string/settings"
        app:titleTextColor="@color/black"
        app:navigationIcon="@drawable/arrow_back"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"

        android:tint="?attr/iconTint"

        />

    <LinearLayout
        android:id="@+id/settingsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="24dp">




            <Switch
                android:id="@+id/switchDarkTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="@dimen/medium_padding"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="@string/dark_theme"
                android:textSize="@dimen/text"
                android:layout_gravity="end|center_vertical"



                />



        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:text="@string/share_the_app"
                android:textColor="@color/black"
                android:textSize="@dimen/text"
                android:gravity="center"
                android:layout_marginStart="@dimen/medium_padding"

               />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/share"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/medium_padding"

                />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:text="@string/write_to_support"
                android:textColor="@color/black"
                android:textSize="@dimen/text"
                android:gravity="center"
                android:layout_marginStart="@dimen/medium_padding"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/support"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/medium_padding"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:text="@string/user_agreement"
                android:textColor="@color/black"
                android:textSize="@dimen/text"
                android:gravity="center"
                android:layout_marginStart="@dimen/medium_padding"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/arrow_forward"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/medium_padding"/>


        </FrameLayout>

    </LinearLayout>

</LinearLayout>