<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/title"
            android:paddingTop="14dp"
            android:paddingStart="@dimen/medium_padding" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/medium_padding"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="28dp">

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            app:cornerRadius="@dimen/medium_padding"
            android:text="@string/search"
            android:textColor="@color/blackYP"
            android:textSize="@dimen/title"
            android:textAllCaps="false"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/blackYP" />

        <Button
            android:id="@+id/button_media"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_padding"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            app:cornerRadius="@dimen/medium_padding"
            android:text="@string/media"
            android:textColor="@color/blackYP"
            android:textSize="@dimen/title"
            android:textAllCaps="false"
            app:icon="@drawable/media"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/blackYP" />

        <Button
            android:id="@+id/button_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_padding"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            app:cornerRadius="@dimen/medium_padding"
            android:text="@string/settings"
            android:textColor="@color/blackYP"
            android:textSize="@dimen/title"
            android:textAllCaps="false"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/blackYP" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>