<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/whiteBlack"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="56dp"
        android:layout_height="@dimen/fifty_six"
        android:contentDescription=" "
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/arrow_back"
        app:tint="?attr/blackWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/newPlaylist"
        style="@style/NewPlaylistTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/four"
        android:paddingLeft="@dimen/twelve"
        android:paddingTop="@dimen/ten"
        android:paddingBottom="@dimen/twelve"
        android:text="@string/new_playlist"
        app:layout_constraintBottom_toTopOf="@id/playlistImage"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/playlistImage"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:layout_marginHorizontal="@dimen/twenty_four"
        android:layout_marginTop="26dp"
        android:scaleType="centerCrop"
        android:src="@drawable/playlist_img_add"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPlaylist" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        style="@style/TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_padding"
        android:layout_marginTop="@dimen/thirty_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlistImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistName"
            style="@style/TextInField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/playlist_name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/medium_padding" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description"
        style="@style/TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_padding"
        android:layout_marginTop="@dimen/medium_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistDescription"
            style="@style/TextInField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/playlist_description"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:paddingHorizontal="@dimen/medium_padding" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/createPlaylist"
        style="@style/ButtonСreate"
        android:enabled="false"
        android:paddingVertical="13dp"
        android:text="@string/playlist_create"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

</androidx.constraintlayout.widget.ConstraintLayout>