<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player.ui.AudioPlayerActivity">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="56dp"
            android:layout_height="@dimen/fifty_six"
            android:contentDescription=" "
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/arrow_back"
            app:tint="?attr/blackWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/artwork"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_padding"
            android:layout_marginTop="@dimen/twenty_six"
            android:layout_marginEnd="@dimen/large_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back"
            app:srcCompat="@drawable/placeholder_big"/>

        <TextView
            android:id="@+id/track_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_padding"
            android:layout_marginTop="@dimen/large_padding"
            android:layout_marginEnd="@dimen/large_padding"
            android:text="@string/track_name"
            android:textSize="@dimen/twenty_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/ys_display_medium"
            app:layout_constraintTop_toBottomOf="@+id/artwork" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_padding"
            android:layout_marginTop="@dimen/twelve"
            android:layout_marginEnd="@dimen/large_padding"
            android:text="@string/artist_name"
            android:textSize="@dimen/medium_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/ys_display_medium"
            app:layout_constraintTop_toBottomOf="@+id/track_name" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/thirty"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artistName"
            app:srcCompat="@drawable/play" />

        <ImageView
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_padding"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="@+id/play"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/play"
            app:srcCompat="@drawable/add_list" />

        <ImageView
            android:id="@+id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/large_padding"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="@+id/play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/play"
            app:srcCompat="@drawable/like"
            />

        <TextView
            android:id="@+id/timing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/four"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/time"
            android:textAlignment="center"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/play"
            app:layout_constraintStart_toStartOf="@+id/play"
            app:layout_constraintTop_toBottomOf="@+id/play" />

        <TextView
            android:id="@+id/trackTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_padding"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="@dimen/text13"
            android:textColor="@color/gray"
            android:text="@string/track_time"
            app:layout_constraintBottom_toTopOf="@+id/collection"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="trackTimeMillsTag"
            app:layout_constraintTop_toBottomOf="@+id/timing" />

        <TextView
            android:id="@+id/collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_padding"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/collection_name"
            android:textSize="@dimen/text13"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toTopOf="@+id/year"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="collectionNameTag"
            app:layout_constraintTop_toBottomOf="@+id/trackTime" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_padding"
            android:text="@string/release_date"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="@dimen/text13"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toTopOf="@+id/genre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="releaseDateTag"
            app:layout_constraintTop_toBottomOf="@+id/collection" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_padding"
            android:text="@string/genre_name"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="@dimen/text13"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toTopOf="@+id/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="primaryGenreNameTag"
            app:layout_constraintTop_toBottomOf="@+id/year" />
        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_padding"
            android:text="@string/country"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="@dimen/text13"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="countryTag"
            app:layout_constraintTop_toBottomOf="@+id/genre" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/textBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_tags="countryTag, primaryGenreNameTag, releaseDateTag, collectionNameTag,  trackTimeMillsTag"
            app:barrierDirection="end" />

        <TextView
            android:id="@+id/trackTimeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/large_padding"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:text="@string/track_time"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textBarrier"
            app:layout_constraintTop_toTopOf="@+id/trackTime" />

        <TextView
            android:id="@+id/collectionName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/large_padding"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:text="@string/collection_name"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textBarrier"
            app:layout_constraintTop_toTopOf="@+id/collection" />

        <TextView
            android:id="@+id/yearName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/large_padding"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:text="@string/release_date"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textBarrier"
            app:layout_constraintTop_toTopOf="@+id/year" />

        <TextView
            android:id="@+id/genreName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/large_padding"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:text="@string/genre_name"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textBarrier"
            app:layout_constraintTop_toTopOf="@+id/genre" />

        <TextView
            android:id="@+id/countryName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/large_padding"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:text="@string/country"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textBarrier"
            app:layout_constraintTop_toTopOf="@+id/country" />

</androidx.constraintlayout.widget.ConstraintLayout>
